# Commando

./: .gitignore  Commando.cabal  Commando.hs  Makefile  README.md
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-osx/66df782f20e392e29ed276d68d48d65c0b787ac257ea2d3606854359b5075ec9/8.8.3/lib/x86_64-osx-ghc-8.8.3/: libHSCommando-1.0.0.4-4XuVjd3V20eGgecGChCRtE-ghc8.8.3.dylib
.stack-work/install/x86_64-osx/66df782f20e392e29ed276d68d48d65c0b787ac257ea2d3606854359b5075ec9/8.8.3/lib/x86_64-osx-ghc-8.8.3/Commando-1.0.0.4-4XuVjd3V20eGgecGChCRtE/System/: Commando.dyn_hi  Commando.hi
.stack-work/install/x86_64-osx/66df782f20e392e29ed276d68d48d65c0b787ac257ea2d3606854359b5075ec9/8.8.3/pkgdb/: Commando-1.0.0.4-4XuVjd3V20eGgecGChCRtE.conf  package.cache
System/: Commando.hs
